--- a/WebCovid19/Views/DonacionInsumos/Donar.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/Donar.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Entidades.Views.VMNecesidadesDonacionesInsumos
+﻿@model Entidades.DonacionesInsumos
 @{
     ViewBag.Title = "Donar";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
@@ -8,14 +7,16 @@
 @using (Html.BeginForm("Donar", "DonacionInsumos", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
 {
     <input type="hidden" name="IdNecesidadDonacionInsumo" value="@Model.IdNecesidadDonacionInsumo" />
+    
+    <center>
+        <b>Cantidad a donar:</b>
+        <div class="wrap-input100 validate-input">
+            @*Inputs con razor*@
+            @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "input100" } })
+            <span class="focus-input100"></span>
+            @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
+        </div><br />
+        <button type="submit" class="btn btn-primary ml-2">DONAR</button>
+    </center>
 
-    <div>
-        <center>
-            <b>Cantidad a donar:</b>
-            <div class="wrap-input100 validate-input">
-                <input type="number" name="Cantidad" class="btn btn-primary ml-2" min="0" />
-            </div><br />
-            <button type="submit" class="btn btn-primary ml-2">DONAR</button>
-        </center>
-    </div>
 }
