--- a/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Entidades.Views.VMComprobantePago
 
 @{
-    ViewBag.Title = "Seleccion comprobante de pago";
+    ViewBag.Title = "Selección comprobante de pago";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
@@ -16,7 +16,6 @@
 
         {
             <input type="hidden" name="IdDonacionMonetaria" value="@Model.IdDonacionMonetaria" />
-
 
             @Html.AntiForgeryToken()
 
