--- a/WebCovid19/Views/Shared/_NecesidadesLayout.cshtml
+++ b/WebCovid19/Views/Shared/_NecesidadesLayout.cshtml
@@ -3,6 +3,6 @@
     Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
 
-
-@RenderBody()
-
+    <div class="container">
+        @RenderBody()
+    </div>
