--- a/WebCovid19/Views/Necesidades/Insumos.cshtml
+++ b/WebCovid19/Views/Necesidades/Insumos.cshtml
@@ -5,40 +5,34 @@
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
-<h2>Insumos</h2>
+<div class="row">
+    <div class="col offset-md-2 col-md-8 text-center border border-primary">
+        @using (Html.BeginForm("Insumos", "Necesidades", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <h4>Agregar Insumos</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-@using (Html.BeginForm("Insumos", "Necesidades", FormMethod.Post)) 
-{
-    @Html.AntiForgeryToken()
-    
-<div class="text-center border border-light p-5">
-    <h4>Agregar Insumos</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+            </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control", @Type = "number" } })
+                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
+
+            </div>
+
+            <div class="btn-group">
+                <div class="btn-group-sm">
+                    <input type="submit" value="Siguiente" class="btn btn-primary" />
+                </div>
+            </div>
+        }
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control", @Type = "number" } })
-            @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="btn-group">
-        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
-        <div class="col-2"></div>
-        <input type="reset" value="Reiniciar" class="btn btn-primary" />
-        <div class="col-2"></div>
-        <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
-    </div>
 </div>
-}
-
