--- a/WebCovid19/Views/Necesidades/Modificar.cshtml
+++ b/WebCovid19/Views/Necesidades/Modificar.cshtml
@@ -4,82 +4,75 @@
     ViewBag.Title = "Modificar";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
+        <div class="row">
+            <div class="col offset-md-2 col-md-8 text-center border border-primary">
+                @using (Html.BeginForm("Modificar", "Necesidades", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    @Html.AntiForgeryToken()
 
-<h2>Modificar</h2>
+                    <h4>Modificar Necesidad</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    </div>
 
-@using (Html.BeginForm("Modificar", "Necesidades", FormMethod.Post,new { enctype = "multipart/form-data" }))
-{
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>Modificar Necesidad</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.TelefonoContacto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.TelefonoContacto, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.TelefonoContacto, "", new { @class = "text-danger" })
+                    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.TelefonoContacto, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TelefonoContacto, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TelefonoContacto, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
+                    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" } })
+                        @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
+                    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" } })
-            @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    @Html.HiddenFor(model => model.IdNecesidad)
+                    @Html.HiddenFor(model => model.IdUsuarioCreador)
+                    @Html.HiddenFor(model => model.TipoDonacion)
 
-    @Html.HiddenFor(model => model.IdNecesidad)
-    @Html.HiddenFor(model => model.IdUsuarioCreador)
-    @Html.HiddenFor(model => model.FechaCreacion)
-    @Html.HiddenFor(model => model.Valoracion)
-    @Html.HiddenFor(model => model.TipoDonacion)
-    @Html.HiddenFor(model => model.NecesidadesValoraciones)
+                    <div class="form-group-sm">
+                        <input type="submit" value="Modificar" class="btn btn-primary" />
+                    </div>
 
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value="Modificar" class="btn btn-default" />
-    </div>
-    @if (Model.TipoDonacion == Entidades.Enum.TipoDonacion.Insumos)
-    {
-        <a href="Necesidades/Insumos">Agregar Insumos</a>
-        <a href="Necesidades/EditarInsumos">Editar Insumos</a>
-    }
-    else
-    {
-        <a href="Necesidades/Monetaria">Agregar Necesidad Monetaria</a>
-        <a href="Necesidades/EditarMonetaria">Editar Necesidades Monetaria</a>
-    }
-</div>
-</div>
-}
+                    if (Model.TipoDonacion == Entidades.Enum.TipoDonacion.Insumos)
+                    {
+                        <div class="form-group-sm">
+                            @Html.ActionLink("Agregar otro Insumo", "Insumos", "Necesidades", null, new { @class = "btn btn-primary" })
+                            @Html.ActionLink("Editar Insumos", "EditarInsumos", "Necesidades", null, new { @class = "btn btn-primary" })
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group-sm">
+                            @Html.ActionLink("Agregar otra Monetaria", "Monetaria", "Necesidades", null, new { @class = "btn btn-primary" })
+                            @Html.ActionLink("Editar Monetaria", "EditarMonetaria", "Necesidades", null, new { @class = "btn btn-primary" })
+                        </div>
+                    }
+                    if (Model.NecesidadesReferencias.Count < 2)
+                    {
+                        <div class="form-group-sm">
+                            @Html.ActionLink("Agregar Referencias", "Referencias", "Necesidades", null, new { @class = "btn btn-primary" })
+                        </div>
+                            }
+                            @Html.ActionLink("Editar Referencias", "EditarReferencias", "Necesidades", null, new { @class = "btn btn-primary" })
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+                            }
+                        </div>
+                    </div>
