--- a/WebCovid19/Views/Necesidades/Monetaria.cshtml
+++ b/WebCovid19/Views/Necesidades/Monetaria.cshtml
@@ -4,42 +4,35 @@
     ViewBag.Title = "Monetaria";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
+        <div class="row">
+            <div class="col offset-md-2 col-md-8 text-center border border-primary">
+                @using (Html.BeginForm("Monetaria", "Necesidades", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Agregar Necesidad Monetaria</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-<h2>Monetaria</h2>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Dinero, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Dinero, new { htmlAttributes = new { @type = "number", @min = "1", @step = "0.01", @value = "1", @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Dinero, "", new { @class = "text-danger" })
+                    </div>
 
-@using (Html.BeginForm("Monetaria", "Necesidades", FormMethod.Post)) 
-{
-    @Html.AntiForgeryToken()
-    
-<div class="text-center border border-light p-5">
-    <h4>Agregar Necesidad Monetaria</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.CBU, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.CBU, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.CBU, "", new { @class = "text-danger" })
+                    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Dinero, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Dinero, new { htmlAttributes = new { @type = "number", @min = "1", @step = "0.01", @value = "1", @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Dinero, "", new { @class = "text-danger" })
+                    <div class="btn-group">
+                        <div class="btn-group-sm">
+                            @Html.ActionLink("Cancelar", "Index", "Home", null, new { @class = "btn btn-primary" })
+                            <input type="submit" value="Siguiente" class="btn btn-primary" />
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.CBU, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.CBU, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CBU, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="btn-group">
-        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
-        <div class="col-2"></div>
-        <input type="reset" value="Reiniciar" class="btn btn-primary" />
-        <div class="col-2"></div>
-        <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
-    </div>
-</div>
-}
 
 
