--- a/WebCovid19/Views/Necesidades/Referencias.cshtml
+++ b/WebCovid19/Views/Necesidades/Referencias.cshtml
@@ -4,57 +4,42 @@
     ViewBag.Title = "Referencias";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
+<div class="row">
+    <div class="col offset-md-2 col-md-8 text-center border border-primary">
+        @using (Html.BeginForm("Referencias", "Necesidades", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <h4>Agregar contactos de referencia</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-<h2>Referencias</h2>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nombre1, "", new { @class = "text-danger" })
+            </div>
 
-@using (Html.BeginForm("Referencias", "Necesidades", FormMethod.Post)) 
-{
-    @Html.AntiForgeryToken()
-    
-<div class="text-center border border-light p-5">
-    <h4>Agregar contactos de referencia</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Telefono1, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Telefono1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Telefono1, "", new { @class = "text-danger" })
+            </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre1, "", new { @class = "text-danger" })
-        </div>
-    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Nombre2, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Nombre2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nombre2, "", new { @class = "text-danger" })
+            </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Telefono1, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Telefono1, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Telefono1, "", new { @class = "text-danger" })
-        </div>
-    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Telefono2, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Telefono2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Telefono2, "", new { @class = "text-danger" })
+            </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Nombre2, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre2, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre2, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Telefono2, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Telefono2, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Telefono2, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="btn-group">
-        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
-        <div class="col-2"></div>
-        <input type="reset" value="Reiniciar" class="btn btn-primary" />
-        <div class="col-2"></div>
-        <input type="submit" value="Crear Necesidad" class="offset-md-6 btn btn-primary" />
+            <div class="btn-group-sm">
+                <input type="submit" value="Finalizar" class="btn btn-primary" />
+            </div>
+        }
     </div>
 </div>
-}
-
