--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -195,14 +195,14 @@
                     </div>
                     @if (Model.IdUsuarioCreador == idSession)
                     {
-                        <div class="col-md-12 btn-group mt-4 mb-3">
-                            @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
+                <div class="col-md-12 btn-group mt-4 mb-3">
+                    @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
 
-                            @if (Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada)
-                            {
-                                <button type="button" class="btn btn-info ml-2">Editar</button>
-                            }
-                        </div>
+                    @if (Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada)
+                    {
+                        @Html.ActionLink("Editar", "Modificar/" + @Model.IdNecesidad, "Necesidades", null, new { @class = "btn btn-info ml-2" })
+                    }
+                </div>
                     }
                     else
                     {
