--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    string estadoCheckbox = (string)TempData["estadoCheckbox"];
+﻿<div>
+    @{
+        string estadoCheckbox = (string)TempData["estadoCheckbox"];
 }
 
 <div class="container mb-5">
@@ -55,19 +56,14 @@
 
                     </li>
                     <li class="nav-item active my-sm-2">
-                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-
                         @Html.ActionLink("Home", "Home", "Necesidades", null, new { @class = "nav-link hover text-light" })
 
 
                     </li>
                     <li class="nav-item active my-sm-2">
-
-                        <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
                         @Html.ActionLink("Crear Necesidad", "Crear", "Necesidades", null, new { @class = "nav-link hover text-light" })
                     </li>
                     <li class="nav-item active my-sm-2">
-                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
                         @Html.ActionLink("Acerca de", "acerca-de", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
@@ -110,19 +106,20 @@
                                     @Html.ActionLink("Mi Perfil", "Perfil", "Usuario", null, new { @class = "hover", id = "link" })
                                 </a>
                             </li>
-                          
-                         @if(Session["Admin"] as string != "")
-                         {
-                            <li>
-                                <a href="" class="text-light">
-                                    <svg class="bi bi-exclamation-octagon-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" d="M11.46.146A.5.5 0 0011.107 0H4.893a.5.5 0 00-.353.146L.146 4.54A.5.5 0 000 4.893v6.214a.5.5 0 00.146.353l4.394 4.394a.5.5 0 00.353.146h6.214a.5.5 0 00.353-.146l4.394-4.394a.5.5 0 00.146-.353V4.893a.5.5 0 00-.146-.353L11.46.146zM8 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
-                                    </svg>
-                                    @Html.ActionLink("Denuncias (Admin)", "Administrador", "Usuario", null, new { @class = "hover", id = "link" })
 
-                                </a>
-                            </li>
-                         }   <li class="divider"></li>
+                            @if (Session["Admin"] as string != "")
+                            {
+                                <li>
+                                    <a href="" class="text-light">
+                                        <svg class="bi bi-exclamation-octagon-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" d="M11.46.146A.5.5 0 0011.107 0H4.893a.5.5 0 00-.353.146L.146 4.54A.5.5 0 000 4.893v6.214a.5.5 0 00.146.353l4.394 4.394a.5.5 0 00.353.146h6.214a.5.5 0 00.353-.146l4.394-4.394a.5.5 0 00.146-.353V4.893a.5.5 0 00-.146-.353L11.46.146zM8 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
+                                        </svg>
+                                        @Html.ActionLink("Denuncias (Admin)", "Administrador", "Usuario", null, new { @class = "hover", id = "link" })
+
+                                    </a>
+                                </li>
+                            }
+                            <li class="divider"></li>
                             @if (Session["UserId"] as string != "")
                             {
                                 <li>
@@ -142,4 +139,5 @@
 
     </nav>
     <!-- Termina la definición del menú -->
+</div>
 </div>
