--- a/WebCovid19/Views/Necesidades/Referencias.cshtml
+++ b/WebCovid19/Views/Necesidades/Referencias.cshtml
@@ -35,6 +35,7 @@
                 @Html.LabelFor(model => model.Telefono2, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.EditorFor(model => model.Telefono2, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Telefono2, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.TelIguales</p>
             </div>
 
             <div class="btn-group-sm">
