--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -14,7 +14,7 @@
 
 
         <div class="collapse navbar-collapse" id="miNavbar">
-            <img class="border border-white" id="image-perfil" src="~/Content/Img/logo2.png">
+            <a href="/"><img class="border border-white" id="image-perfil" src="~/Content/Img/logo2.png"></a>
 
             @using (Html.BeginForm("Home", "Necesidades", FormMethod.Post, new { @class = "col-md-3 ml-4" }))
             {
@@ -51,14 +51,11 @@
             <div class="col-md-4 ml-1">
                 <ul class="navbar-nav ">
                     <li class="nav-item active my-sm-2">
-                        <!-- <a class="nav-link hover text-light" href="#">Inicio</a-->
                         @Html.ActionLink("Inicio", "Index", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
                     <li class="nav-item active my-sm-2">
-                        @Html.ActionLink("Home", "Home", "Necesidades", null, new { @class = "nav-link hover text-light" })
-
-
+                        @Html.ActionLink("Necesidades", "Home", "Necesidades", null, new { @class = "nav-link hover text-light" })
                     </li>
                     <li class="nav-item active my-sm-2">
                         @Html.ActionLink("Crear Necesidad", "Crear", "Necesidades", null, new { @class = "nav-link hover text-light" })
