--- a/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
@@ -73,7 +73,7 @@
                                     <th scope="col"> @necDonacionInsumos.Cantidad </th>
                                 }
                         <th>
-                            $@resultado
+                            @resultado
                         </th>
                                 <th>
                                     <a href="~/DonacionInsumos/Donar?idNecesidadDonacionInsumo=@necDonacionInsumos.IdNecesidadDonacionInsumo" class="btn btn-info" id="boton">Donar</a>
