--- a/WebCovid19/Views/Usuario/Index.cshtml
+++ b/WebCovid19/Views/Usuario/Index.cshtml
@@ -52,7 +52,7 @@ else
         {
             <!--Necesidad 1-->
             <div class="card col-sm-12 col-md-2">
-                <img class="card-img-top" src="@item.Foto" alt="Card image cap">
+                <img class="card-img-top" src="@item.Foto" alt="Card image cap" id="image-index">
                 <div class="card-body">
                     <h5 class="card-title">@item.Nombre</h5>
                     <p class="card-text">@item.Usuarios.UserName</p>
