--- a/WebCovid19/Views/Necesidades/Modificar.cshtml
+++ b/WebCovid19/Views/Necesidades/Modificar.cshtml
@@ -32,8 +32,8 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2"})
+                        @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", Type = "date" } })
                         @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
                     </div>
 
