--- a/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
@@ -11,7 +11,7 @@
         <div class="col-md-12">
             <div class="float-right">
 
-                <p class="card-text text-secondary mt-4"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span> @Model.FechaFin</p>
+                <p class="card-text text-secondary mt-4"><b>Fecha de finalizacion:</b> <span class="fa fa-calendar"></span> @Model.FechaFin</p>
             </div>
             <div class="row">
                 @if (@Model.Foto == null)
