--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-12">
         <div class="float-right">
 
-            <p class="card-text text-secondary mt-5"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span> @Model.FechaFin</p>
+            <p class="card-text text-secondary mt-5"><b>Fecha de finalizacion:</b> <span class="fa fa-calendar"></span> @Model.FechaFin</p>
         </div>
 
 
