--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -1,6 +1,5 @@
-﻿<div>
-    @{
-        string estadoCheckbox = (string)TempData["estadoCheckbox"];
+﻿@{
+    string estadoCheckbox = (string)TempData["estadoCheckbox"];
 }
 
 <div class="container mb-5">
@@ -14,7 +13,7 @@
 
 
         <div class="collapse navbar-collapse" id="miNavbar">
-            <a href="/"><img class="border border-white" id="image-perfil" src="~/Content/Img/logo2.png"></a>
+            <img class="border border-white" id="image-perfil" src="~/Content/Img/logo2.png">
 
             @using (Html.BeginForm("Home", "Necesidades", FormMethod.Post, new { @class = "col-md-3 ml-4" }))
             {
@@ -51,16 +50,24 @@
             <div class="col-md-4 ml-1">
                 <ul class="navbar-nav ">
                     <li class="nav-item active my-sm-2">
+                        <!-- <a class="nav-link hover text-light" href="#">Inicio</a-->
                         @Html.ActionLink("Inicio", "Index", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
                     <li class="nav-item active my-sm-2">
-                        @Html.ActionLink("Necesidades", "Home", "Necesidades", null, new { @class = "nav-link hover text-light" })
+                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
+
+                        @Html.ActionLink("Home", "Home", "Necesidades", null, new { @class = "nav-link hover text-light" })
+
+
                     </li>
                     <li class="nav-item active my-sm-2">
+
+                        <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
                         @Html.ActionLink("Crear Necesidad", "Crear", "Necesidades", null, new { @class = "nav-link hover text-light" })
                     </li>
                     <li class="nav-item active my-sm-2">
+                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
                         @Html.ActionLink("Acerca de", "acerca-de", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
@@ -136,5 +143,4 @@
 
     </nav>
     <!-- Termina la definición del menú -->
-</div>
 </div>
