--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -43,7 +43,7 @@
 
                     <div class="col-md-2">
                         <p class=" text-secondary mt-3"><b>@necesidad.Usuarios.UserName</b></p>
-                        <p><span class="fa fa-calendar"></span> @necesidad.Usuarios.FechaCreacion</p>
+                        <p><span class="fa fa-calendar"></span> @necesidad.FechaCreacion</p>
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
 
                 }
 
-                <p class="card-text text-secondary"><b>Fecha de finalizacion:</b> <span class="fa fa-calendar"></span> @necesidad.FechaFin</p>
+                <p class="card-text text-secondary"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span> @necesidad.FechaFin</p>
                 @if (necesidad.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada | necesidad.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Revision)
                 {
 
