Elimino metodos sin uso

--- a/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
@@ -109,7 +109,7 @@
                         else if (Model.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Revision && Model.IdUsuarioCreador == idSession)
                         {
 
-                            <div class="p-3 mb-2 bg-warning text-white text-center">Esta Necesidad está en revision de ser pública.</div>
+                            <div class="p-3 mb-2 bg-warning text-white text-center">Esta Necesidad esta en revision de ser publica.</div>
 
                         }
 
