--- a/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
@@ -8,11 +8,11 @@
 }
 <br>
 <br>
-<center><h2>Donación de insumos</h2></center>
+<center><h2 class="font-weight-light">Donación de insumos</h2></center>
 
 <div class="card mb-3 mt-5">
     <div class="card-body  mt-5">
-        <h5 class="card-title text-center">Realizar donación de insumos</h5><br>
+        <h5 class="card-title text-center font-weight-light">Realizar donación de insumos</h5><br>
 
         @using (Html.BeginForm("DonacionInsumos", "DonacionInsumos", FormMethod.Get, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
         {
