--- a/WebCovid19/Views/DonacionMonetaria/DonaMonetaria.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/DonaMonetaria.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card mb-3 mt-5">
     <div class="card-body  mt-5">
-        <h5 class="card-title text-center">Realizar Donación Monetaria</h5><br>
+        <h5 class="card-title text-center font-weight-light">Realizar Donación Monetaria</h5><br>
 
 
         @using (Html.BeginForm("DonaMonetaria", "DonacionMonetaria", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
