--- a/WebCovid19/Views/Necesidades/Home.cshtml
+++ b/WebCovid19/Views/Necesidades/Home.cshtml
@@ -38,7 +38,7 @@
 
 
 <div class="section-headline text-center">
-    <h2 class="font-weight-light">Necesidades que están esperando tu ayuda</h2>
+    <h2 class="font-weight-light mt-5">Necesidades que están esperando tu ayuda</h2>
 </div>
 
 @if (ViewBag.ResultadoBusqueda == false)
