--- a/WebCovid19/Views/Usuario/Administrador.cshtml
+++ b/WebCovid19/Views/Usuario/Administrador.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="text-center mt.5" id="margin-top-header">
-    <h1>Gestion de Denuncias</h1>
+    <h2 class="font-weight-light">Gestion de Denuncias</h2>
 </div>
 
 
@@ -17,7 +17,7 @@
     @if (Model.listaNecesidades.Count == 0)
     {
         <div>
-            <h1 class="text-center">No se preocupe, todavia no hay denuncias para gestionar.</h1>
+            <h2 class="text-center font-weight-light">No se preocupe, todavia no hay denuncias para gestionar.</h2>
         </div>
     }
     else
