--- a/WebCovid19/Views/DonacionInsumos/Donar.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/Donar.cshtml
@@ -9,7 +9,7 @@
     <input type="hidden" name="IdNecesidadDonacionInsumo" value="@Model.IdNecesidadDonacionInsumo" />
     
     <center>
-        <b>Cantidad a donar:</b>
+        <h3 class="font-weight-light">Cantidad a donar</h3>
         <div class="wrap-input100 validate-input">
             @*Inputs con razor*@
             @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "input100" } })
