--- a/WebCovid19/Views/DonacionMonetaria/DetalleDeDonacion.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/DetalleDeDonacion.cshtml
@@ -12,7 +12,7 @@
 
 <div class="card mb-3 mt-5">
     <div class="card-body  mt-5">
-        <h5 class="card-title text-center">Realizar donación Monetaria</h5><br>
+        <h5 class="card-title text-center font-weight-light">Realizar donación Monetaria</h5><br>
 
         @Html.AntiForgeryToken()
 
