--- a/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
@@ -7,7 +7,7 @@
 
 <br />
 <br />
-<center><h2>Seleccione comprobante de pago</h2></center>
+<center><h2 class="font-weight-light">Seleccione comprobante de pago</h2></center>
 
 <div class="card" id="card">
 
@@ -24,8 +24,6 @@
                 <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError2</div>
             }
 
-            @*Valido que me suba un comprobante*@
-
             <div class="form-group" name="ArchivoTransferencia">
                 @Html.TextBoxFor(model => model.ArchivoTransferencia, new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" })
                 @Html.ValidationMessageFor(model => model.ArchivoTransferencia, "", new { @class = "text-danger" })
@@ -38,4 +36,3 @@
         }
     </div>
 </div>
-
