--- a/WebCovid19/Views/Necesidades/Insumos.cshtml
+++ b/WebCovid19/Views/Necesidades/Insumos.cshtml
@@ -6,11 +6,11 @@
 }
 
 <div class="row">
-    <div class="col offset-md-2 col-md-8 text-center border border-primary">
+    <div class="col offset-md-2 col-md-8 text-center border border-primary table-light">
         @using (Html.BeginForm("Insumos", "Necesidades", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
-            <h4>Agregar Insumos</h4>
+            <h4 class="font-weight-light">Agregar Insumos</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -22,7 +22,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
-                @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control", @Type = "number" } })
+                @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control", @Type = "number", Min="1" } })
                 @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
 
             </div>
