--- a/WebCovid19/Views/Necesidades/ListadoInsumos.cshtml
+++ b/WebCovid19/Views/Necesidades/ListadoInsumos.cshtml
@@ -6,12 +6,12 @@
 
 <hr />
 <div class="col-12">
-    <h3 class="text-center">Modificación de Insumos</h3>
+    <h3 class="text-center font-weight-light">Modificación de Insumos</h3>
     <h5 class="text-center text-danger">@ViewBag.Error</h5>
 </div>
 
 <div class="col col-md-8 col-lg-12">
-    <table class="table border border-primary">
+    <table class="table border border-primary table-light">
         <tr>
             <th>Nombre</th>
             <th>Cantidad</th>
