--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -8,7 +8,7 @@
 
 @foreach (var necesidad in Model)
 {
-    <div class="container" id="margin-top-header">
+    <div class="container" >
         <div class="card" id="card">
             <div class="col-md-12">
                 <div class="float-right">
