--- a/WebCovid19/Views/Usuario/HistorialDonaciones.cshtml
+++ b/WebCovid19/Views/Usuario/HistorialDonaciones.cshtml
@@ -22,7 +22,7 @@
     else
     {
 
-        <table class="table">
+        <table class="table table-hover table-light">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Nombre</th>
